Simplify the `@InlineMe` generator after review